objects/Org_Constant_CS__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Field to capture the details of the OrgContant value.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Production_Value__c</fullName>
        <label>Non Production Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Value__c</fullName>
        <label>Production Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Org Constant CS</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Production_Value__c</columns>
        <columns>Non_Production_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>